--- a/css/index.css
+++ b/css/index.css
@@ -136,14 +136,24 @@ html, body {
 
 body {
   background-color: #484848;
+  color: white;
 }
 
+nav {
+  display: flex;
+  margin: 2% 20%;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  color: lightgray;
+
+}
 .top-content {
-  max-width: 100%;
   background-image: url("../images/batarang.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   margin: 20px 0px;
   padding: 300px;
-  color: white;
 }
