--- a/css/index.css
+++ b/css/index.css
@@ -130,30 +130,29 @@ table {
 * {
   box-sizing: border-box;
 }
-html, body {
+html,
+body {
   height: 100%;
 }
-
 body {
   background-color: #484848;
   color: white;
+  font-family: 'Montserrat', sans-serif;
 }
-
 nav {
   display: flex;
   margin: 2% 20%;
   justify-content: space-between;
 }
-
 a {
   text-decoration: none;
   color: lightgray;
-
 }
 .top-content {
+  max-width: 100%;
   background-image: url("../images/batarang.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 20px 0px;
-  padding: 300px;
+  margin: 1% 0%;
+  padding: 23%;
 }
