--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459Wlhzg.ttf) format('truetype');
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -133,6 +140,10 @@ table {
 html,
 body {
   height: 100%;
+}
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
 body {
   background-color: #484848;
