--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 // Is this working?
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -54,7 +56,13 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+}
+
+html {
+	box-sizing: border-box;
+	font-size: 62.5%;
+
 }
 
 @main-color: @batman-gray;
